# lightgrep

./: .gitignore  .gitmodules  .travis.yml  BUILD.md  BUILD.txt  CROSS_COMPILE.sh  INSTALL  Jenkinsfile  Makefile  Makefile.am  Makefile.conf  Makefile.darwin.conf  Makefile.linux.conf  Makefile.mingw64-linux.conf  Makefile.windows.conf  README  README.md  SConstruct  bootstrap.sh  build.sh  clang-format  configure.ac  demo_output  fsrip_schema.graphql  jenkins.sh  ldsetup.sh  liblightgrep.spec.in  lightgrep.pc.in  mingw-liblightgrep.spec.in  plan.txt
.github/workflows/: test.yml
.world/: build.sh  clean.sh  config.sh  install.sh  setup.sh
benchmarks/: twaintime.sh  twaintime_with_output.sh
c_example/: SConscript  main.c
design/: frag-patch.tex  fragments.tex  grammar
design/debruijn/: necklace_allerton.ps
documentation/: Lightgrep for EnCase Manual.docx  reref.tex
examples/c_example/: main.c
examples/java_example/: ArrayTest.java
exceltemplate/: lightgrep_Search_Report.xlsx
include/: SearchHit.h  ascii.h  automata.h  basic.h  bitsetutils.h  boost_asio.h  boost_lexical_cast.h  boost_program_options.h  byteencoder.h  byteset.h  c_api_util.h  caching_encoder.h  chain.h  charencoder.h  codegen.h  compiler.h  concrete_encoders.h  concrete_encodings.h  container_out.h  decorating_encoder.h  deletor.h  dfasearch.h  dynamicFSM.h  encoder.h  encoderbase.h  encoderfactory.h  encoding.h  encodings.h  errors.h  factor_analysis.h  fragment.h  fsmthingy.h  fwd_pointers.h  graph.h  handles.h  hitwriter.h  icuconverter.h  icuencoder.h  icuutil.h  identitybyteencoder.h  (+63 more)
include/decoders/: asciidecoder.h  bytesource.h  decoder.h  decoderfactory.h  icudecoder.h  ocedecoder.h  rotdecoder.h  utf16.h  utf16decoder.h  utf32.h  utf32decoder.h  utf8.h  utf8decoder.h  utfdecoderbase.h  xordecoder.h
include/encoders/: ascii.h  byteencoder.h  caching_encoder.h  charencoder.h  concrete_encoders.h  decorating_encoder.h  encoder.h  encoderbase.h  encoderfactory.h  icuencoder.h  oceencoder.h  rotencoder.h  utf16.h  utf32.h  utf8.h  utfbase.h  xorencoder.h
include/lightgrep/: api.h  encodings.h  encodings.h.no_icu  lightgrep_c_byte_byte_trans.h  lightgrep_c_util.h  search_hit.h  transforms.h  util.h
java_example/: ArrayTest.java  Test.java
m4/: lg_remove_flags.m4  lg_replace_flag.m4  lg_uniq_flags.m4
pylightgrep/: demo.py  lg_example.py  lightgrep.py  setup.py  test.py  test.sh
pylightgrep/lightgrep/: __init__.py
pylightgrep/tests/: test_lightgrep.py
pytest/: analyze_trace.py  guid_gen.py  lightgrep_stats.py  receive_data.py  regression.py  send_data_to_lg.py  tb_db_create.py  tinderbox.py  trace_runner.py
pytest/corpora/: norvig1mb.txt  russian-utf16BE.txt  russian-utf16LE.txt  russian-utf32BE.txt  russian-utf32LE.txt  russian-utf7.txt  russian-utf8.txt
pytest/keys/: -----5.txt  ----10.txt  ----25.txt  ----50.txt  ---100.txt  ---200.txt  ---500.txt  --1000.txt  --1500.txt  --2000.txt  --2500.txt  --3000.txt  --4000.txt  --4500.txt  --5000.txt  --6000.txt  --7000.txt  --8000.txt  --9000.txt  -10000.txt  -11000.txt  -12000.txt  -13000.txt  -14000.txt  -15000.txt  -17500.txt  -20000.txt  -25000.txt  -30000.txt  -35000.txt  -40000.txt  -45000.txt  -50000.txt  -60000.txt  -70000.txt  -80000.txt  -90000.txt  100000.txt  114743.txt  fixed30.txt  (+12 more)
re_gen/: Makefile  aQ-3.bz2  alphabet_parser.h  basic.h  db-abcd-4  debruijn  debruijn.cpp  forms  forms.cpp  inst  lgtestlib.py  minfail.py  node.cpp  node.h  parsecheck.cpp  parsetree.h  part.ab.dat.bz2  part.an.dat.bz2  part.ao.dat.bz2  part.ap.dat.bz2  part.aq.dat.bz2  part.ay.dat.bz2  pat2data-enc.py  pat2data-single.py  pat2data.pl  pat2data.py  pat2sorttest.py  pat2swith.py  pat2test-regen.pl  pat2test.pl  pat2test.py  pats-1000  patsample.py  pattern2test.pl  quantifier_parser.h  randpat.cpp  sg.stderr  sg.stdout  shitgrep  shitgrep.cpp  (+6 more)
re_gen/tests/: dot-star_patterns
src/: SConscript  codegen.cpp  compiler.cpp  concrete_encodings.cpp  dfasearch.cpp  dynamicFSM.cpp  graph.cpp  hitwriter.cpp  instructions.cpp  lightgrep_c_api.cpp  nfabuilder.cpp  node.cpp  parser.cpp  parser.ypp  rewriter.cpp  skiptable.cpp  states.cpp  staticFSM.cpp  unparser.cpp  utility.cpp  vm.cpp
src/cmd/: SConscript  hitwriter.cpp  key.cpp  lg_app.cpp  main.cpp  options.cpp  optparser.cpp  reader.cpp  searchcontroller.cpp  server.cpp  util.cpp  version.rc
src/enc/: SConscript  encodings.cpp
src/java/: pom.xml
src/lib/: SConscript  ascii.cpp  automata.cpp  byteencoder.cpp  byteset.cpp  c_api_util.cpp  chain.cpp  charencoder.cpp  codegen.cpp  compiler.cpp  concrete_encoders.cpp  concrete_encodings.cpp  encoder.cpp  encoderbase.cpp  encoderfactory.cpp  encodings.cpp  errors.cpp  fsmthingy.cpp  graph.cpp  handles.cpp  hitwriter.cpp  icuconverter.cpp  icuencoder.cpp  icuutil.cpp  instructions.cpp  lightgrep_c_api.cpp  lightgrep_c_util.cpp  matchgen.cpp  nfabuilder.cpp  nfaoptimizer.cpp  oceencoder.cpp  parsenode.cpp  parser.cpp  parser.ypp  parsetree.cpp  parseutil.cpp  pattern.cpp  pattern_map.cpp  program.cpp  re_grammar.ypp  (+12 more)
src/llama/: batchhandler.cpp  batchhandler.h  blocksequence.h  cli.cpp  cli.h  codec.h  dirconversion.cpp  dirconversion.h  direntstack.cpp  direntstack.h  dirreader.cpp  dirreader.h  dummyoutputhandler.h  dummytracker.h  hex.cpp  (+90 more)
test/: .test_parser.cpp.swp  SConscript  data_reader.cpp  data_reader.h  dtest.cpp  dtest.h  executor.h  main.cpp  mockcallback.cpp  mockcallback.h  options.cpp  options.h  optparser.cpp  optparser.h  server.cpp  stest.cpp  stest.h  test.cpp  test.sh  test_analyze.cpp  test_ascii.cpp  test_auto_search_1.cpp  test_auto_search_2.cpp  test_auto_search_3.cpp  test_auto_search_4.cpp  test_auto_search_5.cpp  test_auto_search_6.cpp  test_auto_search_7.cpp  test_auto_search_8.cpp  test_auto_search_multi_1.cpp  test_auto_search_multi_2.cpp  test_auto_searches_1.cpp  test_auto_searches_2.cpp  test_auto_searches_3.cpp  test_auto_searches_4.cpp  test_auto_searches_5.cpp  test_auto_searches_6.cpp  test_auto_searches_7.cpp  test_auto_searches_8.cpp  test_auto_searches_multi_1.cpp  (+84 more)
tools/: macify.sh  thread_dump.pl
(+78 files in other folders)
